# installfest

./: .gitignore  .gitmodules  3dcvmer9cchobnvhhnlvbt2eag6ufsve  3rrvkjmgguir6rumahj4sakcunlkgodb  4gviebttiggsuequfje1irpgbkllh3ol.darc  CLAUDE.md  DOLT_REMOTE.md  README.md  manifest  package.json  sras9jeaugtaterftapgq2b9kqdmjgoq
.beads/: .gitignore  config.yaml  interactions.jsonl
.claude/: settings.json
.githooks/: pre-commit
apps/: README.md
apps/cc-tmux/: LICENSE  README.md  cc-tmux.tmux  pyproject.toml
apps/cc-tmux/.claude-plugin/: marketplace.json  plugin.json
apps/cc-tmux/hooks/: hooks.json
apps/cc-tmux/skills/cc-config/: SKILL.md
apps/cc-tmux/skills/cc-dispatch/: SKILL.md
apps/cc-tmux/skills/cc-status/: SKILL.md
apps/cc-tmux/src/cc_tmux/: __init__.py  __main__.py  cli.py  conductor.py  log.py  nx_agent.py  parser.py  paths.py  priority.py  registry.py  render.py  testing.py  tmux.py  usage.py
apps/cc-tmux/src/cc_tmux/notify/: __init__.py  base.py  linux.py  macos.py  windows.py
docs/: cloudpc-proxy-setup.md  cmux-sidebar-encoding.md  cmux-workspace-action-api.md  context-budget-rubric.md  executables.md  homelab-recovery.md  mx-broker-git-integration-plan.md  open-family.md  tmux-layout-keybindings.md
home/: .chezmoi.toml.tmpl  .chezmoiignore  .chezmoiremove  dot_gitconfig.tmpl  dot_npmrc  dot_zshenv.tmpl  dot_zshrc  projects.toml  run_after_doctor.sh.tmpl  run_once_create-org-workspace-dirs.sh.tmpl  run_once_install-packages.sh.tmpl  run_once_set-git-identity.sh  run_onchange_after_ado-auth.sh.tmpl  run_onchange_dev-nfs-export.sh.tmpl  (+18 more)
(+864 files in other folders)
