[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cc-tmux"
version = "0.1.0"
description = "Claude Code + tmux plugin: parallel-session state tracking, priority cycling, notification inbox, and dispatch conductor."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Leonardo Acosta", email = "leo@leonardoacosta.dev" }]
keywords = ["tmux", "claude-code", "cli", "notifications"]
# No runtime dependencies: stdlib-only by design (Python 3.10+ on every target machine).
dependencies = []

[project.scripts]
cc-tmux = "cc_tmux.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
